# MikuPan

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: Build.yml  Nightly.yml  Release.yml
android/: AndroidManifest.xml.in
cmake/: GenerateVersion.cmake  assimp.cmake  cimgui.cmake  ffmpeg.cmake  imgui.cmake  implot.cmake  inipp.cmake  mikupan_android.cmake  mikupan_version.h.in  rmlui.cmake  sdl3.cmake  shadercross.cmake  xxhash.cmake
include/: common.h  typedefs.h
include/sce/: libdma.c  libgraph.c  libpad.c  sifrpc.c
iop_orig/: iopmain.h
resources/: mikupan.ini
resources/data/: adpcm_param_tbl.h  adpcm_vol_tbl.h  aene_info_dat.h  aene_info_dat0.h  aene_info_dat1.h  aene_info_dat2.h  aene_info_dat3.h  aene_info_dat4.h  alpha.h  alpha1.h  alpha2.h  anm2d_dat.h  ascii_font_tbl.h  ascii_font_tbl2.h  btl_msel.h  btl_msel2.h  btl_rslt.h  btl_strt.h  btntex.h  camdat.h  canal_bpos.h  canal_size.h  clear_all.h  cloth_furisode.h  cloth_manto0.h  cloth_manto1.h  cloth_manto2.h  cloth_manto3.h  cloth_manto4.h  cloth_manto5.h  cloth_manto6.h  cloth_nawa0.h  cloth_nawa1.h  dbg_menu_3ddisp_menu.h  dbg_menu_c1.h  dbg_menu_c1_1.h  dbg_menu_ccustom.h  dbg_menu_ct.h  dbg_menu_e1.h  dbg_menu_e2.h  (+361 more)
resources/rml/: message_box.rcss  mode_select.rcss  mode_select.rml  options.rcss  options.rml  save_load.rcss  save_load.rml  save_point.rcss  save_point.rml  title.rcss  title.rml
resources/shaders/: bounding_box.vert  bounding_box.vert.hlsl  camera_debug.vert  finder_viewport_blur.frag  heat_haze.frag  heat_haze.vert  mesh_0x12.frag  mesh_0x12.vert  mesh_0x12.vert.hlsl  mesh_0x2.frag  mesh_0x2.vert  mesh_0x2.vert.hlsl  mesh_0xA.vert  mesh_0xA.vert.hlsl  normals_debug.frag  normals_debug.geom  postprocess.frag  shadow_caster.frag  shadow_receiver.frag  shadow_receiver.vert  shadow_silhouette.frag  shadow_silhouette.vert  sprite.frag  sprite.frag.hlsl  sprite.vert  sprite.vert.hlsl  sprite_3D.frag  sprite_3D.vert  textured_mesh_lighted.frag  textured_mesh_lighted.frag.hlsl  untextured_coloured_sprite.frag  untextured_coloured_sprite.frag.hlsl  untextured_coloured_sprite.vert.hlsl
sdk/: addresses.h  common.h  enums.h  intrman.h  introld.h  iop_host.c  iop_host.cpp  libcdvd.h  libsd.h  loadcore.h  sdmacro.h  sif.h  sifrpc.h  sysmem.h  thread.h  timerman.h  typedefs.h
sdk/ee/: eekernel.cpp  eekernel.h  eestruct.h  kernel.cpp  kernel.h
sdk/sce/: devvif1.c  devvif1.cpp  devvif1.h  libcdvd.c  libcdvd.cpp  libcdvd.h  libdma.c  libgifpk.c  libgraph.c  libgraph.h  libmc.c  libmc.cpp  libmc.h  libpad.c  libpad.cpp  libpad.h  libpc.c  libpc.h  libsd.c  libsd.cpp  libsd.h  libvu0.c  libvu0.h  sif.c  sif.cpp  sif.h  sifdev.c  sifdev.h  sifrpc.c  sifrpc.cpp  sifrpc.h
shaders/: default.fs  default.vs  mesh_0x12.frag  simple_textured.frag  sprite_3D.vert
src/common/: audio_common.h  file_loading.cpp  logging.cpp  logging.h  memory_addresses.c  memory_addresses.h  ul_math.c  utility.c  utility.h
src/data/: aene_info_dat0.h  aene_info_dat2.h  aene_info_dat3.h  anm_tbl.h  arei_anm_tbl.h  arei_loopanm_tbl.h  btl_rslt.h  btntex.h  camdat.h  caption_data.h  caption_list.h  clear_all.h  dbg_menu_e8.h  dbg_menu_et.h  dbg_menu_t.h  dgst_load.h  effdat.h  enedmg_fileno_tbl.h  exp_table.h  fefct_deform.h  fefct_fire.h  fene_dat2.h  fene_dat3.h  fgf_tbl.h  flip_table.h  fntdat.h  fog_param.h  fog_param_finder.h  fog_rgb_finder.h  font_sprt.h  font_w_b0.h  font_w_b1.h  foot_se_index.h  fspe_lightanm_fadein1.h  fspe_lightanm_fadeout1.h  fspe_lightanm_fadeout2.h  fspe_lightanm_strong1.h  fspe_lightanm_strong2.h  glist_order.h  hintdat.h  (+171 more)
src/data_eu/: adpcm_param_tbl.h  adpcm_vol_tbl.h  aene_info_dat1.h  aene_info_dat4.h  anm_tbl.h  btl_msel2.h  caption_list.h  dbg_menu_3ddisp_menu.h  dbg_menu_le_point_value.h  dbg_menu_le_spot_value.h  dbg_menu_lt.h  dbg_menu_param.h  door_type_dat.h  enedmg_texno_tbl.h  eneface.h  fefct_sunshine.h  fene_dat1.h  fene_dat4.h  font_w_b0_e.h  font_w_b2.h  fspe_lightanm_fadein2.h  fspe_lightanm_normal1.h  fspe_lightanm_normal2.h  fspe_lightanm_normal3.h  fspe_lightanm_normal4.h  hintreadat.h  hum_table.h  ig_menu_str.h  item_use_dat.h  jene_dat0.h  jene_dat1.h  jene_dat4.h  logotex.h  m001anm_tbl.h  m010anm_tbl.h  m013anm_tbl.h  m014anm_tbl.h  m016anm_tbl.h  m018anm_tbl.h  m019anm_tbl.h  (+184 more)
src/data_us/: msk_dat_top.h  stg_title_sp_bak.h
src/edit/: map_data.cpp  map_data.h  mde_disp.cpp  mde_disp.h  mde_file.cpp  mde_file.h  mde_fmnu.cpp  mde_fmnu.h  mde_main.c  mde_main.h  mde_mdsp.c  mde_mdsp.h  mde_menu.cpp  mde_menu.h  test_2d.c
src/gs/: gs_packet_handler.c  gs_packet_handler.h  gs_server.cpp  gs_server.h  texture_manager.cpp  texture_manager.h  texture_manager_c.h
src/ingame/: ig_glob.h  ig_init.c  ig_init.cpp  ingame.c  ingame.cpp
src/iop/: iop.h  iopmain.c  iopmain.cpp  iopmain.h  iopsys.h
src/main/: gamemain.c  gamemain.cpp  glob.h  glob_types.h  main.c  main.cpp  main.h
src/mc/: mc.c  mc.h  mc_acs.cpp  mc_album.c  mc_album.cpp  mc_at.c  mc_at.cpp  mc_exec.c  mc_exec.cpp  mc_icon.cpp  mc_icon.h  mc_main.c  mc_main.cpp  mc_start.c  mc_start.cpp
src/mikupan/: file_loading.cpp  mikupan_assert.h  mikupan_audio.h  mikupan_audio_bus.cpp  mikupan_audio_bus.h  mikupan_basictypes.h  mikupan_config.c  mikupan_config.cpp  mikupan_config.h  mikupan_config_ini.cpp  mikupan_controller.c  mikupan_controller.cpp  mikupan_controller.h  mikupan_effect_compat.cpp  mikupan_effect_compat.h  mikupan_enemy_entry.h  mikupan_enemy_motion.h  mikupan_file.cpp  mikupan_file.h  mikupan_file_c.h  mikupan_first_person.cpp  mikupan_first_person.h  mikupan_framelimiter.cpp  mikupan_framelimiter.h  mikupan_graph3d_compat.cpp  mikupan_graph3d_compat.h  mikupan_logging.cpp  mikupan_logging.h  mikupan_logging_c.h  mikupan_memory.c  mikupan_memory.cpp  mikupan_memory.h  mikupan_photo_capture.cpp  mikupan_photo_capture.h  mikupan_photo_hint.h  mikupan_point_depth.h  mikupan_rng.c  mikupan_rng.h  mikupan_screenshot.c  mikupan_screenshot.cpp  (+5 more)
src/os/: backup.cpp  fileload.c  fileload.h  key_cnf.c  (+8 more)
tests/: test_invariant_key_cnf.c  test_invariant_sif.c
(+520 files in other folders)
